[gd_scene load_steps=7 format=3 uid="uid://dlfbyqbvhhqkf"]

[ext_resource type="Script" path="res://entities/stalker/stalker.gd" id="1_ys522"]
[ext_resource type="Texture2D" uid="uid://blpa2u5y5hpuk" path="res://entities/stalker/stalker_static.png" id="2_oynmr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6y6oo"]
atlas = ExtResource("2_oynmr")
region = Rect2(0, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_24vyb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y6oo")
}],
"loop": true,
"name": &"static",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_imis1"]
radius = 281.028

[sub_resource type="CircleShape2D" id="CircleShape2D_t4eke"]
radius = 172.003

[node name="Stalker" type="CharacterBody2D"]
script = ExtResource("1_ys522")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_24vyb")
animation = &"static"

[node name="FollowArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FollowArea"]
shape = SubResource("CircleShape2D_imis1")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_t4eke")
debug_color = Color(1, 0.00933159, 0.0364816, 0.42)

[node name="AttackTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="FleeTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="FollowArea" to="." method="_on_follow_area_body_entered"]
[connection signal="body_exited" from="FollowArea" to="." method="_on_follow_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="FleeTimer" to="." method="_on_flee_timer_timeout"]
